final backend commit
this commits adds all BE functionality
